# smart_iterator

./: .gitignore  README.md  pyproject.toml
src/smart_iterator/: __init__.py  helper_types.py  main.py
src/test/: __init__.py  test_basics.py
test/: test_basics.py
