[tool.black]
line-length = 120
target-version = ['py310']

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_iterator"
version = "0.1.1"
description = "An iterator wrapper that allows chaining methods FLUENT-style rather than nesting functions. The available methods are heavily based on Rust's [Iterator](https://doc.rust-lang.org/nightly/core/iter/trait.Iterator.html). In addition, it aims to be fully typehinted (to the degree allowed by Python's type system)."
readme = "README.md"
authors = [{ name = "RundownRhino"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
    "black>=22.10.0",
    "pre-commit>=2.20.0",
    "mypy>=0.982",
    "pytest>=7.1.3",
    "pytest-cov>=4.0.0",
]

keywords = []

[project.urls]
Source = "https://github.com/RundownRhino/smart_iterator"
